Revert ":bug: Fix tagInput alignment"
This reverts commit 617c02f4f5c0e3f096eaf9eb5b0e64a1984390db.

--- a/src/scss/_objects/_components/tag-input.scss
+++ b/src/scss/_objects/_components/tag-input.scss
@@ -23,9 +23,7 @@ $tag-height: 24px;
 
     .cc__tag-input__input {
       margin: 0;
-      height: 31px;
-      display: flex;
-      align-items: center;
+      height: 30px;
     }
   }
 
